# legacy_widgets_for_gtkmm

./: .gitignore  AUTHORS  README  legacy_widgets_for_gtkmm.doap  meson.build
debian/: changelog  control  liblegacy-widgets-for-gtkmm-dev.install  rules
doc/reference/: Doxyfile.in  meson.build
examples/: meson.build
examples/example/: LWGExampleWindow.cpp  LWGExampleWindow.h  main.cc
examples/example1/: LWGExampleWindow.cpp  LWGExampleWindow.h
legacy_widgets_for_gtk/: legacy_widgets_for_gtkmm-uninstalled.pc.in  legacy_widgets_for_gtkmm.h  legacy_widgets_for_gtkmm.pc.in  legacy_widgets_for_gtkmmconfig.h.in  meson.build
legacy_widgets_for_gtk/legacy_widgets_for_gtkmm/: legacy_widgets_for_gtk.h  meson.build  wrap_init.h
legacy_widgets_for_gtk/src/: legacy_widgets_for_gtk.ccg  legacy_widgets_for_gtk.defs  legacy_widgets_for_gtk.hg  legacy_widgets_for_gtk_enums.defs  legacy_widgets_for_gtk_methods.defs  legacy_widgets_for_gtk_signals.defs  legacy_widgets_for_gtk_vfuncs.defs
tests/: meson.build
tests/test1/: main.cc
tests/test2/: main.cc
tools/: generate_defs_and_docs.sh
tools/extra_defs_gen/: generate_defs_legacy_widgets_for_gtk.cc  meson.build
tools/m4/: convert.m4  convert_legacy_widgets_for_gtk.m4
untracked/: README
